accidentally removed gamepad user from service file

--- a/installation/systemuser/systemd.service
+++ b/installation/systemuser/systemd.service
@@ -4,6 +4,8 @@
 Description=MoltenGamepad Event Translator
 
 [Service]
+User=gamepad
+Group=gamepad
 Type=forking
 PIDFile=/var/run/moltengamepad/pid
 ExecStart=/usr/local/bin/moltengamepad \
