improve plugin build system to be more modular

--- a/source/plugin/steamcontroller/Makefile
+++ b/source/plugin/steamcontroller/Makefile
@@ -1,2 +1,12 @@
-SRCS:=$(SRCS) $(shell echo source/plugin/steamcontroller/*.cpp)
-LDLIBS:=$(LDLIBS) -lscraw
+SRCS:=$(shell echo *.cpp)
+OBJS=$(subst .cpp,.o,$(SRCS))
+
+
+
+
+plug.a : $(OBJS)
+	ar rcs $@ $^
+
+
+%.o : %.cpp $(SRCS)
+	g++ -std=c++14 -c -o $@ $<
