--- a/source/plugin/wiimote/Makefile
+++ b/source/plugin/wiimote/Makefile
@@ -1,1 +1,12 @@
-SRCS:=$(SRCS) $(shell echo source/plugin/wiimote/*.cpp)
+SRCS:=$(shell echo *.cpp)
+OBJS=$(subst .cpp,.o,$(SRCS))
+
+
+
+
+plug.a : $(OBJS)
+	ar rcs $@ $^
+
+
+%.o : %.cpp $(SRCS)
+	g++ -std=c++14 -c -o $@ $<
