remove hardcoded g++ from plugin Makefiles, update docs

--- a/source/plugin/steamcontroller/Makefile
+++ b/source/plugin/steamcontroller/Makefile
@@ -1,12 +1,13 @@
 SRCS:=$(shell echo *.cpp)
 OBJS=$(subst .cpp,.o,$(SRCS))
 
+CXXFLAGS+=-std=c++14
 
-
+COMPILE.cpp = $(CXX) $(DEPFLAGS) $(CXXFLAGS) $(CPPFLAGS) $(TARGET_ARCH) -c
 
 plug.a : $(OBJS)
 	ar rcs $@ $^
 
 
 %.o : %.cpp $(SRCS)
-	g++ -std=c++14 -c -o $@ $<
+	$(COMPILE.cpp) -o $@ $<
