--- a/installation/singleuser/udev.rules.template
+++ b/installation/singleuser/udev.rules.template
@@ -2,7 +2,7 @@
 # Installs as 90-moltengamepad.rules.
 
 # Allow user access to uinput.
-KERNEL=="uinput", MODE="0660", GROUP="SINGLEUSER", OPTIONS+="static_node=uinput"
+KERNEL=="uinput", MODE="0660", GROUP="SINGLEUSER", OPTIONS+="static_node=uinput", RUN+="/usr/bin/setfacl -m SINGLEUSER:rw- %E{DEVNAME}"
 
 # Match standard game pads
 SUBSYSTEM=="input", ACTION=="add", \
@@ -15,4 +15,4 @@ SUBSYSTEM=="leds", ACTION=="add", DRIVERS=="wiimote", \
  RUN+="/bin/sh -c 'chmod g+w /sys%p/brightness'"
 
 SUBSYSTEM=="input", DRIVERS=="wiimote", \
- MODE:="0666", OWNER:="SINGLEUSER"
+ MODE:="0660", OWNER:="SINGLEUSER"
