--- a/installation/systemuser/systemd.service
+++ b/installation/systemuser/systemd.service
@@ -10,7 +10,8 @@ Type=forking
 PIDFile=/var/run/moltengamepad/pid
 ExecStart=/usr/local/bin/moltengamepad \
  --daemon --pidfile /var/run/moltengamepad/pid \
- --make-fifo --fifo-path /var/run/moltengamepad/fifo
+ --replace-fifo --fifo-path /var/run/moltengamepad/fifo \
+ --make-socket --socket-path /var/run/moltengamepad/socket
 ExecStop=/usr/bin/kill $MAINPID
 StandardOutput=journal+console
 StandardError=journal+console
