--- a/installation/singleuser/udev.rules.template
+++ b/installation/singleuser/udev.rules.template
@@ -22,3 +22,22 @@ SUBSYSTEM=="input", DRIVERS=="wiimote", \
 
 # Nintendo products over bluetooth hidraw
 KERNEL=="hidraw*", KERNELS=="0005:057E:*.*", MODE="0600", OWNER:="SINGLEUSER"
+
+#------
+# DS4 rules shamelessly stolen from Steam's udev rules.
+#------
+
+# DualShock 4 over USB hidraw
+KERNEL=="hidraw*", ATTRS{idVendor}=="054c", ATTRS{idProduct}=="05c4", MODE="0600", OWNER:="SINGLEUSER", TAG-="uaccess"
+
+# DualShock 4 wireless adapter over USB hidraw
+KERNEL=="hidraw*", ATTRS{idVendor}=="054c", ATTRS{idProduct}=="0ba0", MODE="0600", OWNER:="SINGLEUSER", TAG-="uaccess"
+
+# DualShock 4 Slim over USB hidraw
+KERNEL=="hidraw*", ATTRS{idVendor}=="054c", ATTRS{idProduct}=="09cc", MODE="0600", OWNER:="SINGLEUSER", TAG-="uaccess"
+
+# DualShock 4 over bluetooth hidraw
+KERNEL=="hidraw*", KERNELS=="*054C:05C4*", MODE="0600", OWNER:="SINGLEUSER", TAG-="uaccess"
+
+# DualShock 4 Slim over bluetooth hidraw
+KERNEL=="hidraw*", KERNELS=="*054C:09CC*", MODE="0600", OWNER:="SINGLEUSER", TAG-="uaccess"
